# Python-Projects

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
MyProjects/: main.py
MyProjects/Calculatrice/: Calculatrice.py
MyProjects/Jeux/: Démineur.py  JEUX.py  Puissance_4_ULTIMATE.py  Snake.py
MyProjects/Musique/: Editeur_musique.py  Gestion_musique.py  Lecteur_musique.py  telecharger_musique.bat
docs/: Calculatrice.Calculatrice.rst  Calculatrice.rst  Jeux.Démineur.rst  Jeux.JEUX.rst  Jeux.Puissance_4_ULTIMATE.rst  Jeux.Snake.rst  Jeux.rst  Musique.Editeur_musique.rst  Musique.Gestion_musique.rst  Musique.Lecteur_musique.rst  Musique.rst  MyProjects.rst  conf.py  index.rst  modules.rst
docs/_static/: custom.css
test_MyProjects/: basic_test.py
